@@ -1,3 +1,10 @@
+Description: 
+Author: Joshua Honeycutt <joshua.honeycutt@gmail.com>
+Forwarded: https://github.com/symless/synergy/pull/5840
+Last-Update: 2017-02-12
+---
+This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
+
 --- a/src/test/unittests/synergy/ClipboardChunkTests.cpp
 +++ b/src/test/unittests/synergy/ClipboardChunkTests.cpp
 @@ -26,9 +26,11 @@
