@@ -2,6 +2,8 @@ synergy (1.8.7-stable+dfsg.1-2) UNRELEASED; urgency=medium
 
   * Correct missing tags in man page sgml source. Fix formatting and an extra
     argument.
+  * Added clipboardchunktest.patch to fix FTBFS due to a unit test on big
+    endian archs.
 
  -- Joshua Honeycutt <joshua.honeycutt@gmail.com>  Sun, 12 Feb 2017 02:11:15 -0600
 
